<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mulika"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="10dip">

            <!--  Email Label -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                android:src="@drawable/logo_bob" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/holo_green_dark"
                android:singleLine="true"
                tools:ignore="LabelFor,TextFields" />
            <!--  Password Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_green_dark"
                android:singleLine="true"
                tools:ignore="LabelFor" />
            <!-- Login button -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/colorAccent"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:gravity="center"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp" />
            <!-- Link to Registration Screen -->
            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:gravity="center"
                android:text="@string/new_to_mulikamwizi_register_here"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp" />

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>
</ScrollView>